fix settings header placement on mobile

--- a/web/src/app/app.scss
+++ b/web/src/app/app.scss
@@ -14,6 +14,10 @@
     padding: 1em;
   }
 
+  header {
+    left: 0;
+  }
+
   form {
     margin-top: $unit;
   }
